@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050121
+releasedate		20050122
 
 ##############################################################################
 # host dependent configuration
